# gl_optix_composite

./: CMakeLists.txt  README.md
assets/: lucy.scn
shaders/: optix_camera_rays.cu  optix_miss_rays.cu  optix_shadow_rays.cu  optix_triangle_mesh.cu  render_GL.frag.glsl  render_GL.vert.glsl  render_Optix.frag.glsl  render_Optix.vert.glsl
src/: app_perf.cpp  app_perf.h  app_util.cpp  app_util.h  loader_OBJReader.cpp  loader_OBJReader.h  loader_ObjarReader.cpp  loader_ObjarReader.h  loader_Parser.cpp  loader_Parser.h  main.cpp  main.h  main_win32.cpp  model.cpp  model.h  render.h  render_opengl.cpp  render_optix.cpp  render_optixprime.cpp  render_optixprime.h  scene.cpp  scene.h
